fix:layout issue, slider drag issue on mobile, change 404, 500, comingsoon images with high resolution

--- a/src/routes/survey/start/styles.scss
+++ b/src/routes/survey/start/styles.scss
@@ -69,5 +69,6 @@
 
   .main-content {
     margin-top: 100px;
+    padding-bottom: 80px;
   }
 }
